
plugins {
    id 'java'
}

group 'org.launchcode'
version '1.0-SNAPSHOT'

sourceCompatibility = 1.8

repositories {
    mavenCentral()
}

dependencies {
    testCompile group: 'junit', name: 'junit', version: '4.12'
    implementation('org.apache.commons:commons-csv:1.4')

}





